examples/test/testpolicy18941.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18941
  namespace: namespace442
spec:
  podSelector:
    matchLabels:
      key42: value44
      key13: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value29
          key44: value42
      podSelector:
        matchLabels:
          key45: value41
          key42: value40
          key32: value25
